found bug in script for generating compact KITTICARLA training data

--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -350,6 +350,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load COMPACT test data\n",
+    "# d1 = np.load(\"training_data/compact_scan1.npy\")\n",
+    "# d2 = np.load(\"training_data/compact_scan2.npy\")\n",
+    "# gt = np.load(\"training_data/ground_truth.npy\")\n",
+    "# cgt = np.load(\"training_data/compact_ground_truth.npy\")\n",
+    "# LUT = np.load(\"training_data/LUT.npy\")\n",
+    "# L = np.load(\"training_data/L.npy\")\n",
+    "# U = np.load(\"training_data/U.npy\")\n",
+    "# corn = np.load(\"training_data/corn.npy\")\n",
+    "\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "\n",
+    "# d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_compact_scan1.npy\")\n",
+    "# d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_compact_scan2.npy\")\n",
+    "# gt = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_ground_truth.npy\")\n",
+    "# cgt = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_compact_ground_truth.npy\")\n",
+    "# LUT = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_LUT.npy\")\n",
+    "# L = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_L.npy\")\n",
+    "# U = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_U.npy\")\n",
+    "# corn = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_corn.npy\")\n",
+    "\n",
+    "# d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_compact_scan1.npy\")\n",
+    "# d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_compact_scan2.npy\")\n",
+    "# gt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_ground_truth.npy\")\n",
+    "# cgt_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_compact_ground_truth.npy\")\n",
+    "# LUT_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_LUT.npy\")\n",
+    "# L_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_L.npy\")\n",
+    "# U_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_U.npy\")\n",
+    "# corn_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_corn.npy\")\n",
+    "# d1 = np.append(d1, d1_3, axis = 0)\n",
+    "# d2 = np.append(d2, d2_3, axis = 0)\n",
+    "# gt = np.append(gt, gt_3, axis = 0)\n",
+    "# cgt = np.append(cgt, cgt_3, axis = 0)\n",
+    "# LUT = np.append(LUT, LUT_3, axis = 0)\n",
+    "# L = np.append(L, L_3, axis = 0)\n",
+    "# U = np.append(U, U_3, axis = 0)\n",
+    "# corn = np.append(corn, corn_3, axis = 0)\n",
+    "\n",
+    "d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_compact_scan1.npy\")\n",
+    "d2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_compact_scan2.npy\")\n",
+    "gt = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_ground_truth.npy\")\n",
+    "cgt = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_compact_ground_truth.npy\")\n",
+    "LUT = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_LUT.npy\")\n",
+    "L = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_L.npy\")\n",
+    "U = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_U.npy\")\n",
+    "corn = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_corn.npy\")\n",
+    "# d1 = np.append(d1, d1_4, axis = 0)\n",
+    "# d2 = np.append(d2, d2_4, axis = 0)\n",
+    "# gt = np.append(gt, gt_4, axis = 0)\n",
+    "# cgt = np.append(cgt, cgt_4, axis = 0)\n",
+    "# LUT = np.append(LUT, LUT_4, axis = 0)\n",
+    "# L = np.append(L, L_4, axis = 0)\n",
+    "# U = np.append(U, U_4, axis = 0)\n",
+    "# corn = np.append(corn, corn_4, axis = 0)\n",
+    "\n",
+    "# d1_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_compact_scan1.npy\")\n",
+    "# d2_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_compact_scan2.npy\")\n",
+    "# gt_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_ground_truth.npy\")\n",
+    "# cgt_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_compact_ground_truth.npy\")\n",
+    "# LUT_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_LUT.npy\")\n",
+    "# L_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_L.npy\")\n",
+    "# U_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_U.npy\")\n",
+    "# corn_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_corn.npy\")\n",
+    "# d1 = np.append(d1, d1_2, axis = 0)\n",
+    "# d2 = np.append(d2, d2_2, axis = 0)\n",
+    "# gt = np.append(gt, gt_2, axis = 0)\n",
+    "# cgt = np.append(cgt, cgt_2, axis = 0)\n",
+    "# LUT = np.append(LUT, LUT_2, axis = 0)\n",
+    "# L = np.append(L, L_2, axis = 0)\n",
+    "# U = np.append(U, U_2, axis = 0)\n",
+    "# corn = np.append(corn, corn_2, axis = 0)\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "\n",
+    "\n",
+    "#reshape but don't convert to tensor\n",
+    "points_per_sample = 100          #poitns sammpled from each voxel\n",
+    "tsplit = 0.5 #0.95                   #this fraction goes into training\n",
+    "\n",
+    "scan1 = np.reshape(d1, [-1, points_per_sample, 3])\n",
+    "scan2 = np.reshape(d2, [-1, points_per_sample, 3])\n",
+    "ntrain = int(tsplit*tf.shape(scan1)[0].numpy())\n",
+    "\n",
+    "x_train = np.append(scan1[:ntrain], scan2[:ntrain], axis = 1)\n",
+    "x_test = np.append(scan1[ntrain:], scan2[ntrain:], axis = 1)\n",
+    "print(np.shape(x_train))\n",
+    "print(np.shape(x_test))\n",
+    "\n",
+    "y_train = gt[:ntrain] #for standard training/ test data\n",
+    "y_test = gt[ntrain:]\n",
+    "\n",
+    "# y_train = gt[:ntrain][:,:,0] #when using compact data\n",
+    "# y_test = gt[ntrain:][:,:,0]\n",
+    "LUT_train = tf.convert_to_tensor(LUT)[:ntrain] \n",
+    "ULUT_train = tf.matmul(U[:ntrain], LUT_train)\n",
+    "\n",
+    "LUT = tf.convert_to_tensor(LUT)[ntrain:]\n",
+    "ULUT_test = tf.matmul(U[ntrain:], LUT)\n",
+    "\n",
+    "\n",
+    "U = tf.convert_to_tensor(U)[ntrain:]\n",
+    "L = tf.convert_to_tensor(L)[ntrain:]\n",
+    "corn_train = corn[:ntrain]\n",
+    "corn_test = corn[ntrain:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Testing new network structure informed by voxel boundaries\n",
     "#   input both point clouds AND VOXEL BOUNDS to DNN\n",
     "#_________________________________________________________________\n",
@@ -487,8 +598,8 @@
    "source": [
     "def augment(points, gt):\n",
     "    # jitter points\n",
-    "#     points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float32)\n",
-    "    points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float64) #try this if above doesn't work\n",
+    "    points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float32)\n",
+    "#     points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float64) #try this if above doesn't work\n",
     "\n",
     "    # shuffle points in first point cloud\n",
     "#     points = tf.concat([tf.random.shuffle(points[:50]), tf.random.shuffle(points[50:100]), points[100:]], axis = 0)\n",
@@ -496,8 +607,8 @@
     "\n",
     "    #TEST- shuffle and randomly translate cloud 2 and ground truth -- why is this not working???\n",
     "    shift_scale = 0.1 #don't want to make this too large for PC to reach in 1 iter(?)\n",
-    "    shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float64) #debug\n",
-    "#     shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float32) #debug\n",
+    "#     shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float64) #debug\n",
+    "    shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float32) #debug\n",
     "#     points = tf.concat([tf.random.shuffle(points[:50]), tf.random.shuffle(points[50:]) + shift[:3]], axis = 0)\n",
     "    points = tf.concat([tf.random.shuffle(points[:100]), tf.random.shuffle(points[100:]) + shift[:3]], axis = 0)\n",
     "    gt += shift\n",
@@ -713,7 +824,7 @@
     "#visualize results of network on test data\n",
     "#2d plots (x and y only)\n",
     "fig1, ax1 = plt.subplots()\n",
-    "n = int(np.floor(500*np.random.rand()))\n",
+    "n = int(np.floor(2000*np.random.rand()))\n",
     "# n = 276 #sample number (from x_test)\n",
     "\n",
     "print(\"n = \", n)\n",
@@ -734,8 +845,8 @@
     "for i in range(runlen):\n",
     "    correction = model.predict(inputs)[0] #show what the network thinks\n",
     "#     correction = correction*0.1\n",
-    "#     correction = y_test[n] #show actual solution\n",
-    "    corr_sum += correction\n",
+    "    correction = y_test[n] #show actual solution\n",
+    "#     corr_sum += correction\n",
     "#     print(correction)\n",
     "    c1 = np.array([c1[0,:] + correction[0], c1[1,:] + correction[1], c1[2,:] + correction[2]])\n",
     "    inputs = np.append(c1, c2, axis = 1).T[None,:,:]\n",
