making more training data, added identity ULUT to allow training of modelnet40 data on compact loss function

--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -38,7 +38,7 @@
     "print(gpus)\n",
     "if gpus:\n",
     "  try:\n",
-    "    memlim = 18*1024\n",
+    "    memlim = 16*1024\n",
     "    tf.config.experimental.set_virtual_device_configuration(gpus[0], [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=memlim)])\n",
     "  except RuntimeError as e:\n",
     "    print(e)\n",
@@ -77,15 +77,6 @@
    "outputs": [],
    "source": [
     "#load COMPACT test data\n",
-    "# d1 = np.load(\"training_data/compact_scan1.npy\")\n",
-    "# d2 = np.load(\"training_data/compact_scan2.npy\")\n",
-    "# gt = np.load(\"training_data/ground_truth.npy\")\n",
-    "# cgt = np.load(\"training_data/compact_ground_truth.npy\")\n",
-    "# LUT = np.load(\"training_data/LUT.npy\")\n",
-    "# L = np.load(\"training_data/L.npy\")\n",
-    "# U = np.load(\"training_data/U.npy\")\n",
-    "# corn = np.load(\"training_data/corn.npy\")\n",
-    "\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "d1 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_compact_scan1.npy\")\n",
@@ -96,6 +87,24 @@
     "L = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_L.npy\")\n",
     "U = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_U.npy\")\n",
     "corn = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0095_corn.npy\")\n",
+    "\n",
+    "d1_7 = np.load(\"training_data/compact_scan1.npy\")\n",
+    "d2_7 = np.load(\"training_data/compact_scan2.npy\")\n",
+    "gt_7 = np.load(\"training_data/ground_truth.npy\")\n",
+    "cgt_7 = np.load(\"training_data/compact_ground_truth.npy\")\n",
+    "LUT_7 = np.load(\"training_data/LUT.npy\")\n",
+    "L_7 = np.load(\"training_data/L.npy\")\n",
+    "U_7 = np.load(\"training_data/U.npy\")\n",
+    "corn_7 = np.load(\"training_data/corn.npy\")\n",
+    "d1 = np.append(d1, d1_7, axis = 0)\n",
+    "d2 = np.append(d2, d2_7, axis = 0)\n",
+    "gt = np.append(gt, gt_7, axis = 0)\n",
+    "cgt = np.append(cgt, cgt_7, axis = 0)\n",
+    "LUT = np.append(LUT, LUT_7, axis = 0)\n",
+    "L = np.append(L, L_7, axis = 0)\n",
+    "U = np.append(U, U_7, axis = 0)\n",
+    "corn = np.append(corn, corn_7, axis = 0)\n",
+    "d1_7 = d2_7 = gt_7 = cgt_7 = LUT_7 = L_7 = U_7 = corn_7 = None\n",
     "\n",
     "d1_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_compact_scan1.npy\")\n",
     "d2_3 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown3_compact_scan2.npy\")\n",
@@ -113,6 +122,8 @@
     "L = np.append(L, L_3, axis = 0)\n",
     "U = np.append(U, U_3, axis = 0)\n",
     "corn = np.append(corn, corn_3, axis = 0)\n",
+    "d1_3 = d2_3 = gt_3 = cgt_3 = LUT_3 = L_3 = U_3 = corn_3 = None\n",
+    "\n",
     "\n",
     "d1_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown2_compact_scan1.npy\")\n",
     "d2_5 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown2_compact_scan2.npy\")\n",
@@ -130,6 +141,40 @@
     "L = np.append(L, L_5, axis = 0)\n",
     "U = np.append(U, U_5, axis = 0)\n",
     "corn = np.append(corn, corn_5, axis = 0)\n",
+    "d1_5 = d2_5 = gt_5 = cgt_5 = LUT_5 = L_5 = U_5 = corn_5 = None\n",
+    "\n",
+    "d1_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_compact_scan1.npy\")\n",
+    "d2_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_compact_scan2.npy\")\n",
+    "gt_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_ground_truth.npy\")\n",
+    "cgt_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_compact_ground_truth.npy\")\n",
+    "LUT_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_LUT.npy\")\n",
+    "L_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_L.npy\")\n",
+    "U_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_U.npy\")\n",
+    "corn_8 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0117_corn.npy\")\n",
+    "d1 = np.append(d1, d1_8, axis = 0)\n",
+    "d2 = np.append(d2, d2_8, axis = 0)\n",
+    "gt = np.append(gt, gt_8, axis = 0)\n",
+    "cgt = np.append(cgt, cgt_8, axis = 0)\n",
+    "LUT = np.append(LUT, LUT_8, axis = 0)\n",
+    "L = np.append(L, L_8, axis = 0)\n",
+    "U = np.append(U, U_8, axis = 0)\n",
+    "corn = np.append(corn, corn_8, axis = 0)\n",
+    "d1_8 = d2_8 = gt_8 = cgt_8 = LUT_8 = L_8 = U_8 = corn_8 = None\n",
+    "\n",
+    "#test: add in synthetic ModelNet40 training data\n",
+    "d1_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan1_320k.npy\")\n",
+    "d2_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_scan2_320k.npy\")\n",
+    "gt_6 = np.load(\"/media/derm/06EF-127D1/TrainingData/ModelNet40/100pts_ground_truth_320k.npy\")\n",
+    "LUT_6 = tf.eye(3,3, batch_shape = [len(gt_6)])\n",
+    "L_6 = tf.eye(3,3, batch_shape = [len(gt_6)])\n",
+    "U_6 = tf.eye(3,3, batch_shape = [len(gt_6)])\n",
+    "d1 = np.append(d1, d1_6, axis = 0)\n",
+    "d2 = np.append(d2, d2_6, axis = 0)\n",
+    "gt = np.append(gt, gt_6, axis = 0)\n",
+    "LUT = np.append(LUT, LUT_6, axis = 0)\n",
+    "L = np.append(L, L_6, axis = 0)\n",
+    "U = np.append(U, U_6, axis = 0)\n",
+    "d1_6= d2_6 = gt_6 = cgt_6 = LUT_6 = L_6 = U_6 = corn_6 = None\n",
     "\n",
     "d1_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_compact_scan1.npy\")\n",
     "d2_4 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/KCtown1_compact_scan2.npy\")\n",
@@ -147,6 +192,7 @@
     "L = np.append(L, L_4, axis = 0)\n",
     "U = np.append(U, U_4, axis = 0)\n",
     "corn = np.append(corn, corn_4, axis = 0)\n",
+    "d1_4 = d2_4 = gt_4 = cgt_4 = LUT_4 = L_4 = U_4 = corn_4 = None\n",
     "\n",
     "d1_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_compact_scan1.npy\")\n",
     "d2_2 = np.load(\"/media/derm/06EF-127D1/TrainingData/compact/0091_compact_scan2.npy\")\n",
@@ -164,6 +210,7 @@
     "L = np.append(L, L_2, axis = 0)\n",
     "U = np.append(U, U_2, axis = 0)\n",
     "corn = np.append(corn, corn_2, axis = 0)\n",
+    "d1_2= d2_2 = gt_2 = cgt_2 = LUT_2 = L_2 = U_2 = corn_2 = None\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
     "\n",
@@ -214,15 +261,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#test code to figure how to get shift working efficiently when we expand y_train to contin ULU^T\n",
-    "print(y_train_extra)\n",
+    "#test: make identity LUT for modelnet40 training data\n",
     "\n",
-    "shift_scale = .01\n",
-    "shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float32) + 10 #may need float64\n",
-    "# print(shift)\n",
+    "# print(ULUT_train[0])\n",
+    "# test = tf.eye(3,3, batch_shape = [2])\n",
+    "# print(test)\n",
     "\n",
-    "y_train_extra = tf.concat([(y_train_extra[:,:,0] + shift)[:,:,None], y_train_extra[:,:,1:] ], axis = -1)\n",
-    "print(y_train_extra)"
+    "# print(tf.shape(LUT_6))\n",
+    "# print(ULUT_train)\n",
+    "# print(y_train)\n"
    ]
   },
   {
@@ -235,14 +282,16 @@
     "# tf.data.experimental.enable_debug_mode()\n",
     "def augment(points, gt):\n",
     "    # jitter points\n",
-    "    points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float32)\n",
+    "    points += tf.random.uniform(points.shape, -0.005, 0.005, dtype=tf.float64)\n",
     "\n",
     "    #shuffle and randomly translate cloud 2 and ground truth\n",
     "    shift_scale = 0.2 #don't want to make this too large for PC to reach in 1 iter(?)\n",
-    "    shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float32) #may need float64\n",
+    "    shift = tf.cast(tf.concat([shift_scale*tf.random.normal([3])], axis=0) , tf.float64) #may need float64\n",
     "    points = tf.concat([tf.random.shuffle(points[:100]), tf.random.shuffle(points[100:]) + shift[:3]], axis = 0)\n",
-    "    gt = tf.concat([(gt[:,0] + shift)[:,None], gt[:,1:] ], axis = -1)\n",
-    "    \n",
+    "#     gt = tf.concat([(gt[:,0] + shift)[:,None], gt[:,1:] ], axis = -1) #was this\n",
+    "    gt = tf.concat([(gt[:,0] + tf.cast(shift,tf.float32))[:,None], gt[:,1:] ], axis = -1) #when working with modelnet40\n",
+    "\n",
+    "\n",
     "    #no shift\n",
     "#     points = tf.concat([tf.random.shuffle(points[:100]), tf.random.shuffle(points[100:])], axis = 0)\n",
     "    \n",
@@ -251,6 +300,8 @@
     "BATCH_SIZE =  1024\n",
     "\n",
     "y_train_extra = tf.concat([y_train[:, :, None], ULUT_train], 2)\n",
+    "# print(y_train_extra)\n",
+    "# print(x_train)\n",
     "# y_train_extra = np.append(y_train[:, :, None], ULUT_train, 2)\n",
     "y_test_extra = tf.concat([y_test[:, :, None], ULUT_test], 2)\n",
     "# y_test_extra = np.append(y_test[:, :, None], ULUT_test, 2)\n",
@@ -274,8 +325,9 @@
    "outputs": [],
    "source": [
     "from network import Net\n",
+    "# from network import bestNet as Net\n",
     "\n",
-    "runLen = 32\n",
+    "runLen = 64\n",
     "BS = 1024\n",
     "\n",
     "y_train_extra = tf.concat([y_train[:, :, None], ULUT_train], 2)\n",
@@ -297,7 +349,9 @@
     "    loss_total = (tf.math.reduce_mean(tf.math.abs(y_pred[:,:,None] - y_true[:,:,None]), axis = 0)**2 )[:,0]\n",
     "    loss_total = tf.math.sqrt(loss_total)\n",
     "    loss = (loss_compact + loss_total) / 2\n",
-    "        \n",
+    "#     loss = loss_compact\n",
+    "#     loss = loss_compact*0.25 + loss_total*(0.75)    \n",
+    "    \n",
     "    return loss\n",
     "\n",
     "def scheduler(epoch, learning_rate):\n",
@@ -305,16 +359,16 @@
     "    part2 = 2*runLen//4\n",
     "    part3 = 3*runLen//4\n",
     "    if epoch < part1:\n",
-    "        learning_rate = 0.0005\n",
+    "        learning_rate = 0.0001\n",
     "        return learning_rate\n",
     "    if epoch >= part1 and epoch < part2:\n",
-    "        learning_rate = 0.0001       \n",
+    "        learning_rate = 0.00005       \n",
     "        return learning_rate\n",
     "    if epoch >= part2 and epoch < part3:\n",
-    "        learning_rate = 0.00005     \n",
+    "        learning_rate = 0.00001     \n",
     "        return learning_rate\n",
     "    if epoch >= part3:\n",
-    "        learning_rate = 0.00001\n",
+    "        learning_rate = 0.000001\n",
     "        return learning_rate\n",
     "\n",
     "model = Net() #comment out to re-train existing network\n",
@@ -520,7 +574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = int(np.floor(300*np.random.rand()))\n",
+    "n = int(np.floor(3000*np.random.rand()))\n",
     "# n = 100\n",
     "print(n)\n",
     "\n",
@@ -566,7 +620,10 @@
     "\n",
     "#draw initial scan2\n",
     "# disp.append(Points(x_test[n,points_per_sample:].numpy(), c = 'red', r = 5))\n",
-    "disp.append(Points(x_test[n,points_per_sample:], c = 'blue', r = 10, alpha = 0.7))\n",
+    "disp.append(Points(x_test[n,points_per_sample:], c = 'green', r = 10, alpha = 0.7))\n",
+    "\n",
+    "#draw scan2 corrected by DNN\n",
+    "disp.append(Points(x_test[n, points_per_sample:] - corr_sum, c = \"blue\", r =10, alpha = 0.7 ))\n",
     "\n",
     "#Draw arrow for ground truth soln vec\n",
     "# disp.append(Arrow(mean1 + y_test[n], mean1, c = 'y4', s = 0.002, res = 100)) #arbitrarily start arrow from scan1 center\n",
@@ -646,7 +703,7 @@
     "print(\"x_test\" , tf.shape(x_test))\n",
     "print(\"y_test\" , tf.shape(y_test))\n",
     "\n",
-    "runlen = 2\n",
+    "runlen = 5\n",
     "corr_sum = np.zeros([tf.shape(x_test)[0].numpy(),1,3]) #init var to store correction contributions\n",
     "for i in range(runlen):\n",
     "    correction = model.predict(inputs)[:,None,:] #show what the network thinks\n",
@@ -803,31 +860,54 @@
     "#consider magnitude of error projected in compact directions\n",
     "\n",
     "#use LUT to get compact axis of DNN solution vec for each trial\n",
-    "dnn_compact = tf.matmul(LUT, dnn_estimates[:,:,None])\n",
-    "dnn_compact_xyz = tf.matmul(U, dnn_compact)\n",
-    "truth_compact = tf.matmul(LUT, y_test[:,:,None])\n",
-    "truth_compact_xyz = tf.matmul(U, truth_compact)\n",
+    "#was this\n",
+    "# dnn_compact = tf.matmul(LUT, dnn_estimates[:,:,None])\n",
+    "# dnn_compact_xyz = tf.matmul(U, dnn_compact)\n",
+    "# truth_compact = tf.matmul(LUT, y_test[:,:,None])\n",
+    "# truth_compact_xyz = tf.matmul(U, truth_compact) \n",
+    "#new\n",
+    "dnn_compact_xyz = tf.matmul(ULUT_test, dnn_estimates[:,:,None])\n",
+    "# print(tf.shape(dnn_compact))\n",
+    "truth_compact_xyz = tf.matmul(ULUT_test, y_test[:,:,None])\n",
+    "# print(tf.shape(truth_compact_xyz))\n",
     "\n",
-    "#consider all\n",
-    "error_DNN_compact = np.sqrt( np.mean(np.abs(truth_compact_xyz - dnn_compact_xyz), axis = 0)**2 )[:,0]\n",
-    "#ignore cases where DNN explodes...\n",
-    "# error_DNN_compact = np.sqrt( np.mean(np.abs(truth_compact_xyz[goodidx] - dnn_compact_xyz[goodidx]), axis = 0)**2 )[:,0]\n",
-    "print(\"\\n mean compact error DNN: \\n\", error_DNN_compact)\n",
-    "DNN_total = np.sqrt(error_DNN_compact[0]**2 + error_DNN_compact[1]**2 + error_DNN_compact[2]**2)\n",
-    "print(\"total mag DNN\", DNN_total)\n",
+    "# # #old\n",
+    "# #consider all\n",
+    "# error_DNN_compact = np.sqrt( np.mean(np.abs(truth_compact_xyz - dnn_compact_xyz), axis = 0)**2 )[:,0] #wrong(?)\n",
+    "# # ignore cases where DNN explodes...\n",
+    "# # error_DNN_compact = np.sqrt( np.mean(np.abs(truth_compact_xyz[goodidx] - dnn_compact_xyz[goodidx]), axis = 0)**2 )[:,0]\n",
+    "# print(\"\\n mean compact error DNN: \\n\", error_DNN_compact)\n",
+    "# DNN_total = np.sqrt(error_DNN_compact[0]**2 + error_DNN_compact[1]**2 + error_DNN_compact[2]**2)\n",
+    "# print(\"total mag DNN\", DNN_total)\n",
     "\n",
-    "# error_D2D_compact = np.sqrt(np.sum( np.mean(np.abs(truth_compact_xyz + d2d_compact_xyz), axis = 0)**2 ))\n",
-    "#for distrubution means distance\n",
-    "d2d_compact = tf.matmul(LUT, D2D_distance[:,:,None])\n",
-    "d2d_compact_xyz = tf.matmul(U, d2d_compact)\n",
-    "truth_compact = tf.matmul(LUT, y_test[:,:,None])\n",
-    "truth_compact_xyz = tf.matmul(U, truth_compact)\n",
-    "error_D2D_compact = np.sqrt(np.mean(np.abs(truth_compact_xyz + d2d_compact_xyz), axis = 0)**2 )[:,0]\n",
-    "# error_D2D_compact = np.sqrt(np.mean(np.abs(truth_compact_xyz[goodidx] + d2d_compact_xyz[goodidx]), axis = 0)**2 )[:,0] #ignore DNN exploding\n",
-    "print(\"\\n mean compact error D2D: \\n\", error_D2D_compact)\n",
-    "D2D_total = np.sqrt(error_D2D_compact[0]**2 + error_D2D_compact[1]**2 + error_D2D_compact[2]**2)\n",
-    "print(\"total mag D2D\", D2D_total)\n",
-    "\n"
+    "#RMSE\n",
+    "d_dnn = (truth_compact_xyz - dnn_compact_xyz)[:,:,0] #get difference for each xyz component for each trial\n",
+    "# print(d_dnn)\n",
+    "mag_d_dnn = np.sqrt(d_dnn[:,0]**2 + d_dnn[:,1]**2 + d_dnn[:,2]**2) #get magnitude of error in solution\n",
+    "# print(mag_d_dnn)\n",
+    "# print(np.mean(mag_d_dnn))\n",
+    "RMSE_DNN_compact = np.sqrt(np.mean(mag_d_dnn**2))\n",
+    "print(\"\\n mean compact error DNN:\", RMSE_DNN_compact)\n",
+    "\n",
+    "# #old\n",
+    "# # error_D2D_compact = np.sqrt(np.sum( np.mean(np.abs(truth_compact_xyz + d2d_compact_xyz), axis = 0)**2 ))\n",
+    "# #for distrubution means distance\n",
+    "# d2d_compact = tf.matmul(LUT, D2D_distance[:,:,None])\n",
+    "# d2d_compact_xyz = tf.matmul(U, d2d_compact)\n",
+    "# truth_compact = tf.matmul(LUT, y_test[:,:,None])\n",
+    "# truth_compact_xyz = tf.matmul(U, truth_compact)\n",
+    "# error_D2D_compact = np.sqrt(np.mean(np.abs(truth_compact_xyz + d2d_compact_xyz), axis = 0)**2 )[:,0]\n",
+    "# # error_D2D_compact = np.sqrt(np.mean(np.abs(truth_compact_xyz[goodidx] + d2d_compact_xyz[goodidx]), axis = 0)**2 )[:,0] #ignore DNN exploding\n",
+    "# print(\"\\n mean compact error D2D: \\n\", error_D2D_compact)\n",
+    "# D2D_total = np.sqrt(error_D2D_compact[0]**2 + error_D2D_compact[1]**2 + error_D2D_compact[2]**2)\n",
+    "# print(\"total mag D2D\", D2D_total)\n",
+    "\n",
+    "#RMSE\n",
+    "d2d_compact_xyz = tf.matmul(ULUT_test, D2D_distance[:,:,None])\n",
+    "d_d2d = (truth_compact_xyz + d2d_compact_xyz)[:,:,0]\n",
+    "mag_d_d2d = np.sqrt(d_d2d[:,0]**2 + d_d2d[:,1]**2 + d_d2d[:,2]**2)\n",
+    "RMSE_D2D_compact = np.sqrt(np.mean(mag_d_d2d**2))\n",
+    "print(\"\\n mean compact error D2D:\", RMSE_D2D_compact)"
    ]
   },
   {
