--- a/v3/perspective_shift/Perspective Shift Identification.ipynb
+++ b/v3/perspective_shift/Perspective Shift Identification.ipynb
@@ -754,9 +754,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\n",
+       "\\begin{aligned}\n",
+       "& \\text {Table 1.1. Performance on Normalized Training Data }\\\\\n",
+       "&\\begin{array}{cccc}\n",
+       "\\hline \\hline \\text { } & \\text { Mean Absolute Error } & \\text { Batch Size } & \\text { Epochs } & \\text {Notes} \\\\\n",
+       "\\hline \n",
+       "\\text{Scaled and Zeroed} & 0.6297 & 4096 & 10 & \\text { not good } \\\\\n",
+       "\n",
+       "\\text{ModelNet40 (320k LIDAR)} & 0.0413 & 1024 & 32 & \\text { -- } \\\\\n",
+       "\n",
+       "\\text{ModelNet40 320k LIDAR (100pts)} & 0.0322 & 1024 & 100 & \\text {ModelNet100pts.kmod } \\\\\n",
+       "\n",
+       "\\text{ModelNet40 320k LIDAR (100pts)} & 0.0017 \\text { MSE} & 1024 & 100 & \\text {Net.kmod } \\\\\n",
+       "\n",
+       "\\text{ModelNet40 320k LIDAR (50pts)} & 0.0410 & 1024 & 100 & \\text {ModelNet50.kmod } \\\\\n",
+       "\n",
+       "\\text{ModelNet40 LIDAR MAIN (100pts)} & 0.0321 & 1024 & 64 & \\text {SmallNet.kmod } \\\\\n",
+       "\n",
+       "\\text{KITTI 91 skip3 (100pts)} & 0.050 & 128 & 32 & \\text {KITTINet100.kmod } \\\\\n",
+       "\n",
+       "\\text{KITTI_CARLA 1,3 KITTI 91, 95 (100pts)} & 0.0403 & 1024 & 16 & \\text {KITTICARLA100.kmod } \\\\\n",
+       "\n",
+       "\\text{combined data (100pts)} & 0.0413 & 1024 & 64 & \\text {combinedNet.kmod} \\\\\n",
+       "\n",
+       "\\hline\n",
+       "\\end{array}\n",
+       "\\end{aligned}\n",
+       "$$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Latex object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%latex\n",
     "$$\n",
