more messing with forest test data

--- a/v3/spherical_paper/MC_results.ipynb
+++ b/v3/spherical_paper/MC_results.ipynb
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "0b7720a1",
    "metadata": {},
    "outputs": [
@@ -1601,10 +1601,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f447c63c280>"
+       "<matplotlib.legend.Legend at 0x7f447c4fdbb0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
